gcc/testsuite/rust/rustc/ui/rustdoc/feature-gate-doc_primitive_dg.rs
#[rustc_doc_primitive = "usize"]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
/// Some docs
mod usize {}

fn main() {}

